[package]
name = "stacker"
version = "0.1.0"
edition = "2021"
default-run= "server"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[[bin]]
path = "src/console/main.rs"
name = "console"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["time", "serde"] }
config = "0.13.3"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }
thiserror = "1.0"
serde_valid = "0.16.3"
serde_json = { version = "1.0.105", features = [] }
serde_derive = "1.0.188"
actix-web-httpauth = "0.8.1"
actix-cors = "0.6.4"
tracing-actix-web = "0.7.7"
regex = "1.10.2"
rand = "0.8.5"
futures-util = "0.3.29"
futures = "0.3.29"
tokio-stream = "0.1.14"
actix-http = "3.4.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# dctypes
derive_builder = "0.12.0"
indexmap = { version = "2.0.0", features = ["serde"], optional = true }
serde_yaml = "0.9"
lapin = { version = "2.3.1", features = ["serde_json"] }
futures-lite = "1.13.0"
clap = { version = "4.4.8", features = ["derive"] }
serde_path_to_error = "0.1.14"
deadpool-lapin = "0.11.0"
docker-compose-types = "0.7.0"
actix-casbin-auth = { git = "https://github.com/casbin-rs/actix-casbin-auth.git"}

[dependencies.sqlx]
version = "0.6.3"
features = [
    'runtime-actix-rustls',
    "postgres",
    "uuid",
    "tls",
    "chrono",
    "json",
    "offline"
]

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]

[dev-dependencies]
glob = "0.3"
wiremock = "0.5.22"
